# DBoW2

./: CMakeLists.txt  LICENSE.txt  MiniBow.h  README.md  demo.cpp
demo/: demo.cpp
include/DBoW2/: BowVector.h  DBoW2.h  FClass.h  FORB.h  FeatureVector.h  QueryResults.h  ScoringObject.h  TemplatedDatabase.h  TemplatedVocabulary.h
src/: ScoringObject.cpp
